name:                streamy
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

executable streamy
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , conduit-combinators
                     , http-conduit
  default-language:    Haskell2010
